--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,10 @@
   <title>{% block title %}Admin{% endblock %}</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 h-screen flex">
+<body class="bg-gray-100 min-h-screen flex">
 
   <!-- Sidebar -->
-  <aside class="w-64 bg-gray-800 text-gray-100 flex flex-col">
+  <aside class="w-64 bg-gray-800 text-gray-100 flex flex-col min-h-screen">
     <div class="p-4 text-2xl font-bold border-b border-gray-700">
       My Admin
     </div>
@@ -34,6 +34,7 @@
 
     <!-- Page Content -->
     <main class="flex-1 p-6">
+      
       {% block content %}{% endblock %}
     </main>
   </div>
