feat : add order module

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
     </div>
     <nav class="flex-1 p-4 space-y-2">
       <a href="/customer/" class="block p-2 rounded hover:bg-gray-700">Customers</a>
-      <a href="#" class="block p-2 rounded hover:bg-gray-700">Orders</a>
-      <a href="#" class="block p-2 rounded hover:bg-gray-700">Reports</a>
+      <a href="/inventory/" class="block p-2 rounded hover:bg-gray-700">Inventory</a>
+      <a href="/order/" class="block p-2 rounded hover:bg-gray-700">Orders</a>
     </nav>
   </aside>
 
